--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,20 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Document</title>
 </head>
+
 <body>
-        <button id="boton"></button>
-        <video src="videos/Recompensa.mp4" id="video" controls loop preload="auto">
-        </video>
+    <div class="content">
+        <button class="boton alegre" id="alegre">Alegre</button>
+        <button class="boton triste" id="triste">Triste</button>
+        <button class="boton dolido" id="dolido">Dolido</button>
+        <button class="boton muyDolido" id="muy dolido">Muy dolido</button>
+        <button class="boton buchon" id="buchon">Buchon</button>
+    </div>
+    
+    <video src="./videos/me canse de rogarle.mp4" id="video" autoplay controls>
+
+    </video>
     <script src="Emmanuel-Lopez.js"></script>
 </body>
+
 </html>
