loop añadido al video

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="boton buchon" id="buchon">Buchon</button>
     </div>
     
-    <video src="" id="video" autoplay controls>
+    <video src="" id="video" autoplay controls loop>
 
     </video>
     <script src="Emmanuel-Lopez.js"></script>
