--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
 
     </video>
     -->
+    <h1>Fizzbuzz interactivo</h1>
+    <p>Instrucciones: Este programa calcula los multiplos del primer numero y en vez de mostrar ese numero mostrara la
+        palabra fizz, para el segundo numero mostrara la palabra buzz y si un multiplo es numero de ambos mostrara la
+        palabra fizzbuzz</p>
+
+    <div class="form">
+        <input id="num1"class="element" type="text" placeholder="Ingresa el primer numero">
+        <input id="num2" class="element" type="text" placeholder="Ingresa el segundo numero">
+        <input id="numeros" class="element" type="text" placeholder="Ingresa el maximo de numeros a revisar">
+        <button class="element" id="btn">Lets go</button>
+    </div>
+
+    <div id="resultado">
+
+    </div>
+
+
     <script src="Emmanuel-Lopez.js"></script>
 </body>
 
