--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     -->
     <h1>Fizzbuzz interactivo</h1>
     <p class="instrucciones">Instrucciones: Este programa calcula los multiplos del primer numero y en vez de mostrar ese numero mostrara la
-        palabra fizz, para el segundo numero mostrara la palabra buzz y si un multiplo es numero de ambos mostrara la
+        palabra fizz, para el segundo numero mostrara la palabra buzz y si un numero es multiplo de ambos mostrara la
         palabra fizzbuzz</p>
 
     <div class="form">
